# SpeachToText_Qt-Qml

./: .gitignore  CMakeLists.txt  README.md  Resources.qrc
Components/: AudioSampleLevel.qml  MenuWindows.qml  main.qml
Components/BottomPanel/: BottomPanel.qml
Components/BottomPanel/Buttons/: ModelSelector.qml  Record.qml  Reset.qml  Setting.qml  Share.qml
Components/Controls/: MyButton.qml
Components/TopPanel/: TopPanel.qml
Components/TopPanel/Buttons/: Info.qml  Menu.qml
includes/: AudioDevice.h  Downloader.h  Microphon.h  Notifs.h  Recognizer.h  SampleAudioCollector.h  Uncompressor.h
libs/Windows/: qmicroz.lib
src/: AudioDevice.cpp  Downloader.cpp  Microphon.cpp  Recognizer.cpp  SampleAudioCollector.cpp  Uncompressor.cpp  main.cpp
